--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
     "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "vite": "^6.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
