--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "chatapp",
+  "name": "chat-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm ci --prefix backend && npm ci --prefix frontend && cd frontend && npm run build",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "vite": "^6.2.2"
-  }
+  "license": "ISC"
 }
